traversal.column.traversalbycolumn.TraversalByColumn.scala.error
Erreur de compilation :
TraversalByColumn:2: error: not found: value estDevantMur
  estDevantMur()
  ^