traversal.column.traversalbycolumn.TraversalByColumn.scala.code
def getMondeHauteur() = {
  var a=0
  estDevantMur()
}











override def run() {
}